# OctoPilot

./: .gitignore  alembic.ini  diagram.drawio  job_links.txt  pyproject.toml  todo.txt
alembic/: env.py
alembic/versions/: 06632a42beec_create_application_tables.py  488868a45f1c_create_accounts_tables.py  c1a2b5902505_add_accounts.py
mas/: __init__.py
mas/agents/: __init__.py  classifier_agent.py  create_agent.py  experience_agent.py  matcher_agent.py  merger_agent.py  process_agent.py  quality_review_agent.py  refiner_agent.py  skill_agent.py  summary_agent.py
mas/config/: __init__.py  logging.py  setting.py
mas/core/: __init__.py  llms.py  node.py  router.py  state.py  workflow.py
mas/prompts/: application_prompt.py  base_prompt.py  cover_letter_prompt.py  resume_prompt.py
mas/tools/: __init__.py  base_tool.py  scrape_tool.py  search_tool.py
mas/utils/: __init__.py  autoresumebuilder.py  documenting.py  langchain_rag_based.py  parse.py
octopilot/: main.py
octopilot/autopilot/: form_filler.py  resume_matcher.py
octopilot/config/: __init__.py  logging.py  setting.py
octopilot/models/: __init__.py  account.py  application.py  job_description.py  resume.py  user.py
octopilot/schemas/: __init__.py  application.py  job_description.py  matcher.py  (+2 more)
scripts/: init_db.bat  init_dev_env.bat  run_mas.bat  run_octopilot.bat  run_web.bat
temp/: google_login.html  onboard_page.html
test/: test_mas.py
web/: .env.example  .gitignore  README.md  commitlint.config.ts  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
(+110 files in other folders)
